# alight

./: Cargo.toml  README.md
arduino_src/serial_tranfer/: serial_tranfer.ino
src/: build.rs  main.rs  models.rs  preview.rs  screen_capture.rs
src/ui/: main.slint  monitor_selector.slint
