[package]
name = "alight"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-capture = "1.3"
serialport = "4.5"
slint = "1.7.2"
image = "0.25.2"
rayon = "1.10"
tracing = "0.1.40"
tokio = {version="1.40.0", features = ["sync"]}

[build-dependencies]
slint-build = "1.7.2"