[package]
name = "alight"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-capture = "1.3"
serialport = "4.5.1"
slint = "1.8.0"
image = "0.25.2"
rayon = "1.10"
tracing = "0.1.40"
tokio = {version="1.40.0", features = ["sync"]}
ring-channel = "*"

[build-dependencies]
slint-build = "1.8.0"