[package]
name = "alight"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-capture = "1.4.2"
serialport = "4.6.0"
slint = "1.8.0"
image = "0.25.5"
rayon = "1.10"
tracing = "0.1.40"
tokio = {version="1.41.1", features = ["sync"]}
ring-channel = "*"

[build-dependencies]
slint-build = "1.8.0"
winresource = "0.1.19"
